--- a/index.html
+++ b/index.html
@@ -6,25 +6,20 @@
 <script src="https://cdn.staticfile.net/vue/3.2.36/vue.global.min.js"></script>
 </head>
 <body>
-<div id="app">
-    <template v-if="seen">
-        <h1>网站</h1>
-        <p>Google</p>
-        <p>Runoob</p>
-        <p>Taobao</p>
-    </template>
+<div id = "app">
+    <p style = "font-size:25px;">计数器: {{ counter }}</p>
+    <button @click = "counter++" style = "font-size:25px;">点我</button>
 </div>
     
 <script>
 const app = {
   data() {
     return {
-      seen: true /* 改为false，信息就无法显示 */
+      counter: 1
     }
   }
 }
- 
-Vue.createApp(app).mount('#app')
+vm = Vue.createApp(app).mount('#app')
 </script>
 </body>
 </html>
